--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -6,7 +6,7 @@
       <meta property="og:title" content="{{ data[title]['name']|title}}'s Portfolio">
       <meta property="og:description" content="{{ data[title]['name']|title}}'s Portfolio">
       <meta property="og:url" content="{{ url }}">
-      <meta propery="og:author" content="Hadi Chaaban, Logan Hoogendijk, Justin Monteza">
+      <meta propery="og:author" content="Logan Hoogendijk">
       <title>{{data[title]['name']|title}}'s Portfolio</title>
       <link rel="icon" type="image/x-icon" href="{{ data[title]['image']}}">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
