test for script

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -14,7 +14,7 @@
 			<span class="sr-only">Loading...</span>
 		</div>
 	</div>
-	<h1>Timeline Posts</h1>
+	<h1>Timeline Posts!</h1>
 	<table id="timelineposts"></table>
 </body>
 
