--- a/app/templates/components/education.html
+++ b/app/templates/components/education.html
@@ -2,7 +2,7 @@
 <section id="education" class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
         <div class="container has-text-centered p-6">
-            <h1 class="title is-1 is-uppercase has-text-white">Education</h1>
+            <h1 class="title is-1 is-uppercase has-text-white">Education!!!</h1>
             {% for school in data[title]['schools'] %}
             <div class="block">
                 <div class="card">
