added current playing on spotify feature and changed the layout of the website a bit

--- a/app/templates/components/experience.html
+++ b/app/templates/components/experience.html
@@ -1,6 +1,6 @@
 <!-- Experience Start -->
 {% if data[title]['experience'] %}
-<section id="experience" class="hero has-nft-bg is-fullheight">
+<section id="experience" class="hero has-background-info-dark is-fullheight">
     <div class="hero-body">
     <div class="container has-text-centered">
         <h1 class="title is-1 is-uppercase has-text-white ">Experience</h1>
