--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -30,7 +30,7 @@
         </div>
         <div class="block">
             <p>
-                Made with &nbsp; <i class="fa-solid fa-heart"></i> &nbsp; in Detroit, Edmonton, and Markham
+                &nbsp; <i class="fa fa-copyright"></i> &nbsp; Logan Hoogendijk
             </p>
         </div>
         <a href="#top" class="button is-small">Back to top</a>
