--- a/app/templates/components/about.html
+++ b/app/templates/components/about.html
@@ -1,5 +1,5 @@
 <!-- About Me Start -->
-<section class="hero has-jungle-bg is-fullheight p-6">
+<section class="hero has-background-info-dark is-fullheight p-6">
     <div class="hero-body p-6">
         <div class="container has-text-centered">
             <div class="column is-8 is-offset-2">
@@ -17,11 +17,32 @@
                     <div class="box about">
                         <p class="title is-5">About Me</p>
                         <p class="subtitle">{{ data[title]['about'] }}</p>
-                        <div class="buttons is-centered">
-                            {% for anchor in anchors %}
-                            <a href="{{ '#' ~ anchor|lower}}" class="button">{{anchor|lower}}</a>
-                            {% endfor %}
-                        </div>
+                        <!--<p class="subtitle">{{ data[title]['education']}}</p>-->
+                        {% if trackinfo['listening'] is true %}
+                            <div class="columns">
+                            <div class="column is-three-fifths is-offset-one-fifth has-background-light">
+                                <div class="card-content">
+                                    <div style="float: left">
+                                        <img src="{{trackinfo['albumcover']}}" width="100" height="100" style="padding-right: 5%;"/>
+                                    </div>
+                                    <div class="has-text-left" style="padding-left: 5%;">
+                                    <strong>{{trackinfo['name']}}</strong> <br>
+                                    by {{trackinfo['artists']}} <br>
+                                    on {{trackinfo['album']}} <br>
+                                    </div>
+                                    <div style="float: right">
+                                        <a href="{{trackinfo['url']}}">
+                                            <i class="fa fa-2x fa-spotify" style="color:green"></i>
+                                        
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            </div>
+                        {% else %}
+                            <div></div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
