--- a/app/templates/components/about.html
+++ b/app/templates/components/about.html
@@ -1,5 +1,5 @@
 <!-- About Me Start -->
-<section class="hero has-background-info-dark is-fullheight p-6">
+<section class="hero has-background-info is-fullheight p-6">
     <div class="hero-body p-6">
         <div class="container has-text-centered">
             <div class="column is-8 is-offset-2">
@@ -13,36 +13,32 @@
                         <p class="title is-4"> {{ data[title]['name'] }} </p>
                     </div>
                 </div>
-                <div class="card" class="has-background-white about-column">
+                <div class="card" class="about-column">
                     <div class="box about">
                         <p class="title is-5">About Me</p>
                         <p class="subtitle">{{ data[title]['about'] }}</p>
                         <!--<p class="subtitle">{{ data[title]['education']}}</p>-->
-                        {% if trackinfo['listening'] is true %}
-                            <div class="columns">
-                            <div class="column is-three-fifths is-offset-one-fifth has-background-light">
-                                <div class="card-content">
-                                    <div style="float: left">
-                                        <img src="{{trackinfo['albumcover']}}" width="100" height="100" style="padding-right: 5%;"/>
-                                    </div>
-                                    <div class="has-text-left" style="padding-left: 5%;">
-                                    <strong>{{trackinfo['name']}}</strong> <br>
-                                    by {{trackinfo['artists']}} <br>
-                                    on {{trackinfo['album']}} <br>
-                                    </div>
-                                    <div style="float: right">
-                                        <a href="{{trackinfo['url']}}">
-                                            <i class="fa fa-2x fa-spotify" style="color:green"></i>
-                                        
-                                        </a>
-                                    </div>
-
+                        <div class="columns">
+                        <div class="column is-three-fifths is-offset-one-fifth has-background-light">
+                            <div class="card-content">
+                                <div style="float: left">
+                                    <img src="{{trackinfo['albumcover']}}" width="100" height="100" style="padding-right: 5%;"/>
                                 </div>
+                                <div class="has-text-left" style="padding-left: 5%;">
+                                <strong>{{trackinfo['name']}}</strong> <br>
+                                by {{trackinfo['artists']}} <br>
+                                on {{trackinfo['album']}} <br>
+                                </div>
+                                <div style="float: right">
+                                    <a href="{{trackinfo['url']}}">
+                                        <i class="fa fa-2x fa-spotify" style="color:green"></i>
+                                    
+                                    </a>
+                                </div>
+
                             </div>
-                            </div>
-                        {% else %}
-                            <div></div>
-                        {% endif %}
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
