--- a/app/templates/components/hobbies.html
+++ b/app/templates/components/hobbies.html
@@ -1,26 +1,29 @@
 <!-- Hobbies Start -->
-<section id="hobbies" class="hero has-nft-bg is-fullheight">
-    <div class="hero-body">
-        <div class="container has-text-centered p-6">
-            <h1 class="title is-1 is-uppercase has-text-white">Hobbies</h1>
-            <div class="columns">
-                {% for hobbies in data[title]['hobbies'] %}
-                <div class="column">
-                    <div class="card">
-                        <div class="card-content">
-                            <figure class="image is-3by2">
-                                <img src={{ hobbies['image'] }}>
-                            </figure>
-                            <br />
-                            <p class="title">
-                                {{hobbies['hobby']}}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
+{% extends "layouts/base.html" %}
+
+{% block content %}
+
+<section id="hobbies" class="hero is-info is-small is-family-monospace has-text-white">
+    <div class="column is-8 is-offset-2">
+        <div class="hero-body">
+            <div class="title has-text-white">
+                Logan Hoogendijk
+            </div>
+            <div class="block">
+                BLOCK 1 
+            </div>
+            <div class="block">
+                BLOCK 2
+            </div>
+        </div>
+        <div class="hero-body has-background-primary">
+            <div class="card">
+
             </div>
         </div>
     </div>
+        
+    
 </section>
 <!-- Hobbies End -->
+{% endblock %}
