changed color of bg on hobbies page

--- a/app/templates/components/hobbies.html
+++ b/app/templates/components/hobbies.html
@@ -10,7 +10,7 @@
                 Logan Hoogendijk
             </div>
             <div class="block">
-                BLOCK 1 
+                Queen's University '24 - BASc studying Computer Engineering
             </div>
             <div class="block">
                 BLOCK 2
