added text on hobbies page

--- a/app/templates/components/hobbies.html
+++ b/app/templates/components/hobbies.html
@@ -16,7 +16,7 @@
                 BLOCK 2
             </div>
         </div>
-        <div class="hero-body has-background-primary">
+        <div class="hero-body has-background-danger-dark">
             <div class="card">
 
             </div>
