changed layout of website, removed unused html pages

--- a/app/templates/components/navigation.html
+++ b/app/templates/components/navigation.html
@@ -10,7 +10,7 @@
                 About
               </a>
         
-              <a class="navbar-item has-text-white" href="/timeline">
+              <a class="navbar-item has-text-white" href="/projects">
                 Projects
               </a>
         
