--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -17,11 +17,11 @@
       {% include 'components/navigation.html' %}
       <div id="content">{% block content %}{% endblock %}</div>
       {% block footer %}
-      <footer class="footer has-background-primary">
+      <footer class="footer has-background-info">
         <div class="content has-text-white has-text-centered">
           <div class="block">
             <p>
-                <i class="fa fa-copyright"></i> Logan Hoogendijk
+                Copyright <i class="fa fa-copyright"></i> Logan Hoogendijk
             </p>
           </div>
         </div>
