fixed experience columns

--- a/app/templates/components/about.html
+++ b/app/templates/components/about.html
@@ -28,7 +28,7 @@
             </div>
             <div id="grid" class="columns">
                 {% for experience in data[title]['experience'] %}
-                <div class="column" style="display: block">
+                <div class="column" style="display: flex">
                     <div class="notification is-info">
                         <div style="float: left">
                             <img src="{{experience['image']}}" width="120" height="120" style="padding-right: 5%;"/>
