--- a/app/templates/components/about.html
+++ b/app/templates/components/about.html
@@ -16,7 +16,7 @@
             </div>
         </div>
             <div class="block">
-                <p class="is-size-4 has-text-weight-bold has-text-white">Education</p>
+                <p class="is-size-4 has-text-weight-bold has-text-white">Education *TEST DEPLOYMENT*</p>
                 {{data[title]['education']}}
             </div>
             <div class="block">
